--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
                     </li>
             
                     <li class="lista_do_cabecalho">
-                        <a href=""><i class="material-icons icon_cabecalho">menu</i></a>
+                        <i class="material-icons icon_cabecalho">menu</i>
                         <div class="topicos">
                             <a href="">Const e Let</a>
-                            <a href="">Strings</a>
+                            <a href="./HTML/ASSUNTOS/string.html">String</a>
+                            <a href="">Boolean</a>
+                            <a href="">Null e Undefined </a>
+                            <a href="">Object </a>
+                            <a href="">Array</a>
+                            <a href="">Function</a>
+                            <a href="">Number</a>
                         </div>
                 </ul>
                 </div>
