--- a/HTML/bibliografia.html
+++ b/HTML/bibliografia.html
@@ -27,12 +27,10 @@
     <ul>
         <li><a class="texto_body_texto" href="https://fonts.google.com/">Google Fonts</a></li>
         <li><a class="texto_body_texto" href="https://fonts.google.com/icons">Google Icons</a></li>
-        <li><a class="texto_body_texto">Ícone de Andy Horvath</a></li>
-        <li><a class="texto_body_texto">Ícone de Good Ware</a></li>
-        <li><a class="texto_body_texto">Ícone de Freepik</a></li>
         <li><a class="texto_body_texto" href="https://getbootstrap.com/">Bootstrap</a></li>
         <li><a class="texto_body_texto" href="https://getbootstrap.com.br/">Bootstrap em Português</a></li>
         <li><a class="texto_body_texto" href="https://erikasarti.com/html/acentuacao-caracteres-especiais/">Site Erikasarti</a></li>
+        <li><a class="texto_body_texto" href="https://www.devmedia.com.br/listas-em-html/23853#defini%C3%A7%C3%A3o">Site DevMedia</a></li>
     </ul>
 
     <br>
