--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -25,7 +25,7 @@
     <!-- Falar da criação do site -->
     <p class="texto_body_titulo"><strong>SOBRE</strong></p>
     <p class="texto_body_texto">Este site foi confeccionado pelas alunas Jamile Karine Costa de Medeiros,
-        Emilly do Nascimento e Lavínia da Costa da Sales, utilizando-se dele como Trabalho de Conclusão
+        Emilly do Nascimento e Lavínia Costa Sales, utilizando-se dele como Trabalho de Conclusão
         de Curso (TCC) do Instituto Federal de Educação, Ciência e Tecnologia <i>Campus</i> Parnamirim, curso de
         Informática.
     </p>
