--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                         <div class="topicos">
                             <a href="">Const e Let</a>
                             <a href="./HTML/ASSUNTOS/string.html">String</a>
+                            <a href="./HTML/ASSUNTOS/number.html">Number</a>                            
                             <a href="">Boolean</a>
                             <a href="">Null e Undefined </a>
                             <a href="">Object </a>
                             <a href="">Array</a>
                             <a href="">Function</a>
-                            <a href="">Number</a>
                         </div>
                 </ul>
                 </div>
@@ -113,7 +113,7 @@
             <p class="texto_body_texto">© 2024 AprendaTypeScript.com</p>
         </div>
         <div class="div2_rodape">
-            <p><a href="./HTML/assuntos.html" class="texto_body_texto">Assuntos</a></p>
+            <p><a href="./HTML/bibliografia.html" class="texto_body_texto">Bibliografia</a></p>
             <p><a href="./HTML/sobre.html" class="texto_body_texto">Sobre</a></p>
         </div>
         </div>
