--- a/HTML/ASSUNTOS/number.html
+++ b/HTML/ASSUNTOS/number.html
@@ -94,8 +94,7 @@
     <!-- Métodos e Propriedades -->
     <p class="texto_body_titulo">Métodos e Propriedades</p>
     <p class="texto_body_texto">Variáveis do tipo number têm métodos e propriedades embutidos que podem 
-        ser usados para realizar várias operações. Alguns exemplos incluem:
-    </p>
+        ser usados para realizar várias operações. Alguns exemplos incluem:</p>
 
     <ul>
         <li>toString(): Converte um número em uma string.</li>
@@ -103,8 +102,14 @@
 
         <li>toFixed(): Formata um número para uma quantidade específica de casas decimais.</li>
         <img class="img-fluid imagens_dos_codigos" src="../../IMAGES/ASSUNTOS/NUMBER/number_6.png"> 
+        <br>
         <p class="texto_body_texto">Perceba que permaneceram apenas 2 casas decimais após a 
-            vírgula, como foi pedido dentro do método (toFixed(aqui o número de casas))
+            vírgula, como foi pedido dentro do método: toFixed(número de casas desejadas). 
+        </p>
+        <br>
+        <p class="texto_body_texto">As variáveis do tipo number em TS são utilizadas 
+            para representar valores numéricos e podem ser usadas em uma variedade de operações matemáticas. 
+            É importante estar ciente dos limites de precisão e compreender como eles podem afetar seu código.
         </p>
     </ul>
     <br>
