--- a/HTML/ASSUNTOS/string.html
+++ b/HTML/ASSUNTOS/string.html
@@ -50,7 +50,7 @@
                             <a href="./boolean.html">Boolean</a>
                             <a href="">Null e Undefined </a>
                             <a href="">Object </a>
-                            <a href="">Array</a>
+                            <a href="./array.html">Array</a>
                             <a href="">Function</a>
                         </div>
                 </ul>
