--- a/HTML/bibliografia.html
+++ b/HTML/bibliografia.html
@@ -29,15 +29,17 @@
         <li><a class="texto_body_texto" href="https://fonts.google.com/icons">Google Icons</a></li>
         <li><a class="texto_body_texto" href="https://getbootstrap.com/">Bootstrap</a></li>
         <li><a class="texto_body_texto" href="https://getbootstrap.com.br/">Bootstrap em Português</a></li>
-        <li><a class="texto_body_texto" href="https://erikasarti.com/html/acentuacao-caracteres-especiais/">Site Erikasarti</a></li>
-        <li><a class="texto_body_texto" href="https://www.devmedia.com.br/listas-em-html/23853#defini%C3%A7%C3%A3o">Site DevMedia</a></li>
+        <li><a class="texto_body_texto" href="https://erikasarti.com/html/acentuacao-caracteres-especiais/">Site
+                Erikasarti</a></li>
+        <li><a class="texto_body_texto" href="https://www.devmedia.com.br/listas-em-html/23853#defini%C3%A7%C3%A3o">Site
+                DevMedia</a></li>
+        <li><a class="texto_body_texto"
+                href="https://blog.debugeverything.com/pt/javascript-operadores-de-comparacao/">Site Debug
+                Everything</a></li>
     </ul>
 
     <br>
     <p class="voltar_pag_inicial"><a href="../index.html">Voltar para a página inicial</a></p>
-
-
-    </div>
 </body>
 
 </html>
