--- a/index.html
+++ b/index.html
@@ -37,31 +37,33 @@
 
         <!-- Menu -->
         <nav>
-            <center><div class="container">
-                <ul>
-                    <li>
-                        <a href="./HTML/sobre.html"><i class="material-icons icon_cabecalho_inicio">diversity_1</i></a>
-                    </li>
-                    
-                    <li>
-                        <a href="./HTML/bibliografia.html"><span class="material-symbols-outlined">
-                                menu_book
-                            </span></a>
-                    </li>
-            
-                    <li class="lista_do_cabecalho">
-                        <i class="material-icons icon_cabecalho">menu</i>
-                        <div class="topicos">
-                            <a href="">Const e Let</a>
-                            <a href="./HTML/ASSUNTOS/string.html">String</a>
-                            <a href="./HTML/ASSUNTOS/number.html">Number</a>                            
-                            <a href="">Boolean</a>
-                            <a href="">Null e Undefined </a>
-                            <a href="">Object </a>
-                            <a href="">Array</a>
-                            <a href="">Function</a>
-                        </div>
-                </ul>
+            <center>
+                <div class="container">
+                    <ul>
+                        <li>
+                            <a href="./HTML/sobre.html"><i
+                                    class="material-icons icon_cabecalho_inicio">diversity_1</i></a>
+                        </li>
+
+                        <li>
+                            <a href="./HTML/bibliografia.html"><span class="material-symbols-outlined">
+                                    menu_book
+                                </span></a>
+                        </li>
+
+                        <li class="lista_do_cabecalho">
+                            <i class="material-icons icon_cabecalho">menu</i>
+                            <div class="topicos">
+                                <a href="">Const e Let</a>
+                                <a href="./HTML/ASSUNTOS/string.html">String</a>
+                                <a href="./HTML/ASSUNTOS/number.html">Number</a>
+                                <a href="">Boolean</a>
+                                <a href="">Null e Undefined </a>
+                                <a href="">Object </a>
+                                <a href="">Array</a>
+                                <a href="">Function</a>
+                            </div>
+                    </ul>
                 </div>
             </center>
         </nav>
@@ -93,20 +95,35 @@
             o que é um objeto, uma classe, uma função e muito mais.
         </p>
 
-        <p><strong class="texto_body_titulo ">CLASSE</strong></p>
+        <p><strong class="texto_body_titulo">CLASSE</strong></p>
         <p class="texto_body_texto">Este site foi criado com o intuito de ensinar o básico de TypeScript para os
             interessados. Aqui você aprenderá
             o que é um objeto, uma classe, uma função e muito mais.
         </p>
 
-        <p><strong class="texto_body_titulo ">FUNÇÃO</strong></p>
+        <p><strong class="texto_body_titulo">FUNÇÃO</strong></p>
         <p class="texto_body_texto ">Este site foi criado com o intuito de ensinar o básico de TypeScript para os
             interessados. Aqui você aprenderá
             o que é um objeto, uma classe, uma função e muito mais.
         </p>
-
     </div>
+    <br>
+    <br>
+    <p class="texto_body_titulo">CONFIGURAÇÕES NECESSÁRIAS PARA UTILIZAR TYPESCRIPT</p>
+    <ol>
+        <li>
+            <p class="texto_body_texto">Visual Studio Code</p>
+            <img class="img-fluid visual_studio_code_img" src="./IMAGES/visual_studio_code.png">
+            <p class="texto_body_texto">Esse editor de código fonte foi desenvolvido pela Microsoft e lançado em 2015
+                com o objetivo de desenvolver aplicações. O VSCode é leve, multiplataforma, gratuito e de código aberto.
+            </p>
+            <p class="texto_body_texto">As funcionalidades dessa ferramenta são diversas. Além do usuário poder escolher
+                o layout por meio das configurações, ele também terá acesso a esses recursos:
+            </p>
 
+
+        </li>
+    </ol>
     <footer class="main-footer">
         <div class="div1_rodape">
             <img src="./IMAGES/rodape.png" class="img_rodape img-fluid">
